добавлено увеличение картинок при нажатии

--- a/index.html
+++ b/index.html
@@ -293,30 +293,27 @@
               <img
                 id="myImg"
                 src="./images/reviews/photo_2023-11-11_01-35-33.jpg"
-                style="width: 100%"
               />
             </div>
             <div class="rewiew">
               <img
                 id="myImg"
                 src="./images/reviews/photo_2023-11-11_01-43-57.jpg"
-                style="width: 100%"
               />
             </div>
             <div class="rewiew">
               <img
                 id="myImg"
                 src="./images/reviews/photo_2023-11-11_01-44-01.jpg"
-                style="width: 100%"
               />
             </div>
             <div class="rewiew">
               <img
                 id="myImg"
                 src="./images/reviews/photo_2023-11-11_01-44-05.jpg"
-                style="width: 100%"
               />
             </div>
+
           </div>
           
         </section>
@@ -389,10 +386,9 @@
 
       <!-- Модальное окно -->
       <div id="myModal" class="modal">
-        <!-- <span class="close">&times;</span> -->
         <img class="modal-content" id="img01" />
-        <!-- Добавить подпись к фото -->
-        <!-- <div id="caption"></div> -->
+        <!-- <span class="close">&times;</span>  <- добавить крестик для закрытия модального окна -->
+        <!-- <div id="caption"></div>  <- добавить подпись к фото -->
       </div>
 
       <!-- Hamburger menu -->
@@ -410,5 +406,6 @@
       </section>
     </main>
     <script src="./scripts/app.js"></script>
+    <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
   </body>
 </html>
