добавлено увеличение картинок при нажатии

--- a/index.html
+++ b/index.html
@@ -216,40 +216,70 @@
         </section>
         <section class="gallery" id="gallery">
           <div class="slideshow-container">
-            <div class="mySlides fade">
-              <img id="myImg" src="./images/gallery/photo_2023-11-10_21-35-19.jpg" />
-            </div>
-            <div class="mySlides fade">
-              <img id="myImg" src="./images/gallery/photo_2023-11-10_21-35-27.jpg" />
-            </div>
-            <div class="mySlides fade">
-              <img id="myImg" src="./images/gallery/photo_2023-11-10_21-35-37.jpg" />
-            </div>
-            <div class="mySlides fade">
-              <img id="myImg" src="./images/gallery/photo_2023-11-10_21-35-40.jpg" />
-            </div>
-            <div class="mySlides fade">
-              <img id="myImg" src="./images/gallery/photo_2023-11-10_21-35-43.jpg" />
-            </div>
-            <div class="mySlides fade">
-              <img id="myImg" src="./images/gallery/photo_2023-11-10_21-35-46.jpg" />
-            </div>
-            <div class="mySlides fade">
-              <img id="myImg" src="./images/gallery/photo_2023-11-10_21-35-48.jpg" />
-            </div>
-            <div class="mySlides fade">
-              <img id="myImg" src="./images/gallery/photo_2023-11-10_21-35-52.jpg" />
-            </div>
-            <div class="mySlides fade">
-              <img id="myImg" src="./images/gallery/photo_2023-11-10_21-35-55.jpg" />
-            </div>
-            <div class="mySlides fade">
-              <img id="myImg" src="./images/gallery/photo_2023-11-11_02-36-07.jpg" />
-            </div>
-            <div class="mySlides fade">
+            <div class="mySlides slide">
               <img
+                id="myImg"
+                src="./images/gallery/photo_2023-11-10_21-35-19.jpg"
+              />
+            </div>
+            <div class="mySlides slide">
+              <img
+                id="myImg"
+                src="./images/gallery/photo_2023-11-10_21-35-27.jpg"
+              />
+            </div>
+            <div class="mySlides slide">
+              <img
+                id="myImg"
+                src="./images/gallery/photo_2023-11-10_21-35-37.jpg"
+              />
+            </div>
+            <div class="mySlides slide">
+              <img
+                id="myImg"
+                src="./images/gallery/photo_2023-11-10_21-35-40.jpg"
+              />
+            </div>
+            <div class="mySlides slide">
+              <img
+                id="myImg"
+                src="./images/gallery/photo_2023-11-10_21-35-43.jpg"
+              />
+            </div>
+            <div class="mySlides slide">
+              <img
+                id="myImg"
+                src="./images/gallery/photo_2023-11-10_21-35-46.jpg"
+              />
+            </div>
+            <div class="mySlides slide">
+              <img
+                id="myImg"
+                src="./images/gallery/photo_2023-11-10_21-35-48.jpg"
+              />
+            </div>
+            <div class="mySlides slide">
+              <img
+                id="myImg"
+                src="./images/gallery/photo_2023-11-10_21-35-52.jpg"
+              />
+            </div>
+            <div class="mySlides slide">
+              <img
+                id="myImg"
+                src="./images/gallery/photo_2023-11-10_21-35-55.jpg"
+              />
+            </div>
+            <div class="mySlides slide">
+              <img
+                id="myImg"
+                src="./images/gallery/photo_2023-11-11_02-36-07.jpg"
+              />
+            </div>
+            <div class="mySlides slide">
+              <img
+                id="myImg"
                 src="./images/gallery/photo_2023-11-11_02-36-12.jpg"
-                style="width: 100%; object-fit: cover"
               />
             </div>
           </div>
@@ -271,19 +301,18 @@
           </p>
           <audio controls>
             <source src="./images/audio/СныКлоуна_Феи.mp3" type="audio/mpeg" />
-            <!-- <source src="music.ogg" type="audio/ogg" /> --></audio
-          ><audio controls>
+          </audio>
+          <audio controls>
             <source
               src="./images/audio/СныКлоуна_Роллеры.mp3"
               type="audio/mpeg"
             />
-            <!-- <source src="music.ogg" type="audio/ogg" /> --></audio
-          ><audio controls>
+          </audio>
+          <audio controls>
             <source
               src="./images/audio/СныКлоуна_Пауки.mp3"
               type="audio/mpeg"
             />
-            <!-- <source src="music.ogg" type="audio/ogg" /> -->
           </audio>
         </section>
         <section class="rewiews" id="rewiews">
@@ -313,9 +342,7 @@
                 src="./images/reviews/photo_2023-11-11_01-44-05.jpg"
               />
             </div>
-
           </div>
-          
         </section>
         <section class="questions">
           <h2 class="rewiews__title">Вопросы и ответы</h2>
@@ -406,6 +433,9 @@
       </section>
     </main>
     <script src="./scripts/app.js"></script>
-    <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
+    <script
+      defer
+      src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
+    ></script>
   </body>
 </html>
