отредактирован слайдер артистов и отзывов

--- a/index.html
+++ b/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./pages/style.css" />
-    <link
-      rel="stylesheet"
-      href="./blocks/baguetteBox/baguetteBox.min.css"
-    />
+    <link rel="stylesheet" href="./blocks/baguetteBox/baguetteBox.min.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    
 
     <title>Сны Клоуна</title>
   </head>
@@ -222,46 +218,159 @@
                 </p>
               </div>
             </div>
+            <div class="artist swiper-slide">
+              <div class="artist__photo">
+                <img src="./images/carousel/Анастасия_Ермакова.png" />
+              </div>
+              <div class="artist__description">
+                <p class="artist__name">Анастасия Ермакова</p>
+                <p class="artist__text">
+                  Член сборной России по дисциплине фристайл-слалом,
+                  многократный призер Чемпионатов России по роллер спорту
+                </p>
+              </div>
+            </div>
+            <div class="artist swiper-slide">
+              <div class="artist__photo">
+                <img src="./images/carousel/Валерия_Власова.png" />
+              </div>
+              <div class="artist__description">
+                <p class="artist__name">Валерия Власова</p>
+                <p class="artist__text">
+                  Двукратная чемпионка мира по воздушной гимнастике,
+                  многократная победительница Всероссийских соревнований
+                </p>
+              </div>
+            </div>
+            <div class="artist swiper-slide">
+              <div class="artist__photo">
+                <img src="./images/carousel/Регина_Кудряшкина.png" />
+              </div>
+              <div class="artist__description">
+                <p class="artist__name">Регина Кудряшкина</p>
+                <p class="artist__text">
+                  Мастер спорта по художественной гимнастике, многократный
+                  призёр международных соревнований
+                </p>
+              </div>
+            </div>
           </div>
         </section>
 
         <section class="gallery" id="gallery">
           <div class="slideshow-container baguetteBoxTwo">
-            <a class="mySlides slide" href="./images/gallery/photo_2023-11-10_21-35-19.jpg" data-caption="">
-                <img src="./images/gallery/photo_2023-11-10_21-35-19.jpg" alt="1 image">
+            <a
+              class="mySlides slide"
+              href="./images/gallery/photo_2023-11-10_21-35-19.jpg"
+              data-caption=""
+            >
+              <img
+                src="./images/gallery/photo_2023-11-10_21-35-19.jpg"
+                alt="1 image"
+              />
             </a>
-            <a class="mySlides slide" href="./images/gallery/photo_2023-11-10_21-35-27.jpg" data-caption="">
-                <img src="./images/gallery/photo_2023-11-10_21-35-27.jpg" alt="2 image">
+            <a
+              class="mySlides slide"
+              href="./images/gallery/photo_2023-11-10_21-35-27.jpg"
+              data-caption=""
+            >
+              <img
+                src="./images/gallery/photo_2023-11-10_21-35-27.jpg"
+                alt="2 image"
+              />
             </a>
-            <a class="mySlides slide" href="./images/gallery/photo_2023-11-10_21-35-37.jpg" data-caption="">
-              <img src="./images/gallery/photo_2023-11-10_21-35-37.jpg" alt="3 image">
+            <a
+              class="mySlides slide"
+              href="./images/gallery/photo_2023-11-10_21-35-37.jpg"
+              data-caption=""
+            >
+              <img
+                src="./images/gallery/photo_2023-11-10_21-35-37.jpg"
+                alt="3 image"
+              />
             </a>
-            <a class="mySlides slide" href="./images/gallery/photo_2023-11-10_21-35-46.jpg" data-caption="">
-              <img src="./images/gallery/photo_2023-11-10_21-35-46.jpg" alt="4 image">
+            <a
+              class="mySlides slide"
+              href="./images/gallery/photo_2023-11-10_21-35-46.jpg"
+              data-caption=""
+            >
+              <img
+                src="./images/gallery/photo_2023-11-10_21-35-46.jpg"
+                alt="4 image"
+              />
             </a>
-            <a class="mySlides slide" href="./images/gallery/photo_2023-11-10_21-35-40.jpg" data-caption="">
-              <img src="./images/gallery/photo_2023-11-10_21-35-40.jpg" alt="5 image">
+            <a
+              class="mySlides slide"
+              href="./images/gallery/photo_2023-11-10_21-35-40.jpg"
+              data-caption=""
+            >
+              <img
+                src="./images/gallery/photo_2023-11-10_21-35-40.jpg"
+                alt="5 image"
+              />
             </a>
-            <a class="mySlides slide" href="./images/gallery/photo_2023-11-10_21-35-43.jpg" data-caption="">
-              <img src="./images/gallery/photo_2023-11-10_21-35-43.jpg" alt="6 image">
+            <a
+              class="mySlides slide"
+              href="./images/gallery/photo_2023-11-10_21-35-43.jpg"
+              data-caption=""
+            >
+              <img
+                src="./images/gallery/photo_2023-11-10_21-35-43.jpg"
+                alt="6 image"
+              />
             </a>
-            <a class="mySlides slide" href="./images/gallery/photo_2023-11-10_21-35-48.jpg" data-caption="">
-              <img src="./images/gallery/photo_2023-11-10_21-35-48.jpg" alt="7 image">
+            <a
+              class="mySlides slide"
+              href="./images/gallery/photo_2023-11-10_21-35-48.jpg"
+              data-caption=""
+            >
+              <img
+                src="./images/gallery/photo_2023-11-10_21-35-48.jpg"
+                alt="7 image"
+              />
             </a>
-            <a class="mySlides slide" href="./images/gallery/photo_2023-11-10_21-35-52.jpg" data-caption="">
-              <img src="./images/gallery/photo_2023-11-10_21-35-52.jpg" alt="8 image">
+            <a
+              class="mySlides slide"
+              href="./images/gallery/photo_2023-11-10_21-35-52.jpg"
+              data-caption=""
+            >
+              <img
+                src="./images/gallery/photo_2023-11-10_21-35-52.jpg"
+                alt="8 image"
+              />
             </a>
-            <a class="mySlides slide" href="./images/gallery/photo_2023-11-10_21-35-55.jpg" data-caption="">
-              <img src="./images/gallery/photo_2023-11-10_21-35-55.jpg" alt="9 image">
+            <a
+              class="mySlides slide"
+              href="./images/gallery/photo_2023-11-10_21-35-55.jpg"
+              data-caption=""
+            >
+              <img
+                src="./images/gallery/photo_2023-11-10_21-35-55.jpg"
+                alt="9 image"
+              />
             </a>
-            <a class="mySlides slide" href="./images/gallery/photo_2023-11-11_02-36-07.jpg" data-caption="">
-              <img src="./images/gallery/photo_2023-11-11_02-36-07.jpg" alt="10 image">
+            <a
+              class="mySlides slide"
+              href="./images/gallery/photo_2023-11-11_02-36-07.jpg"
+              data-caption=""
+            >
+              <img
+                src="./images/gallery/photo_2023-11-11_02-36-07.jpg"
+                alt="10 image"
+              />
             </a>
-            <a class="mySlides slide" href="./images/gallery/photo_2023-11-11_02-36-12.jpg" data-caption="">
-              <img src="./images/gallery/photo_2023-11-11_02-36-12.jpg" alt="11 image">
+            <a
+              class="mySlides slide"
+              href="./images/gallery/photo_2023-11-11_02-36-12.jpg"
+              data-caption=""
+            >
+              <img
+                src="./images/gallery/photo_2023-11-11_02-36-12.jpg"
+                alt="11 image"
+              />
             </a>
           </div>
-  
+
           <a class="prev" onclick="plusSlides(-1)"
             ><img
               src="./images/ссссс.png"
@@ -295,22 +404,53 @@
             />
           </audio>
         </section>
-        <section class="rewiews" id="rewiews">
+        <section class="rewiews mySwiper2" id="rewiews">
           <h2 class="rewiews__title">Отзывы</h2>
-          <div class="rewiews__content baguetteBoxTwo">
-            <a class="rewiew" href="./images/reviews/photo_2023-11-11_01-35-33.jpg" data-caption="">
-              <img id="myImg" src="./images/reviews/photo_2023-11-11_01-35-33.jpg" alt="1 image">
+          <div class="rewiews__content baguetteBoxTwo swiper-wrapper">
+            <a
+              class="rewiew swiper-slide"
+              href="./images/reviews/photo_2023-11-11_01-35-33.jpg"
+              data-caption=""
+            >
+              <img
+                id="myImg"
+                src="./images/reviews/photo_2023-11-11_01-35-33.jpg"
+                alt="1 image"
+              />
             </a>
-            <a class="rewiew" href="./images/reviews/photo_2023-11-11_01-43-57.jpg" data-caption="">
-              <img id="myImg" src="./images/reviews/photo_2023-11-11_01-43-57.jpg" alt="1 image">
+            <a
+              class="rewiew swiper-slide"
+              href="./images/reviews/photo_2023-11-11_01-43-57.jpg"
+              data-caption=""
+            >
+              <img
+                id="myImg"
+                src="./images/reviews/photo_2023-11-11_01-43-57.jpg"
+                alt="1 image"
+              />
             </a>
-            <a class="rewiew" href="./images/reviews/photo_2023-11-11_01-44-01.jpg" data-caption="">
-              <img id="myImg" src="./images/reviews/photo_2023-11-11_01-44-01.jpg" alt="1 image">
+            <a
+              class="rewiew swiper-slide"
+              href="./images/reviews/photo_2023-11-11_01-44-01.jpg"
+              data-caption=""
+            >
+              <img
+                id="myImg"
+                src="./images/reviews/photo_2023-11-11_01-44-01.jpg"
+                alt="1 image"
+              />
             </a>
-            <a class="rewiew" href="./images/reviews/photo_2023-11-11_01-44-05.jpg" data-caption="">
-              <img id="myImg" src="./images/reviews/photo_2023-11-11_01-44-05.jpg" alt="1 image">
+            <a
+              class="rewiew swiper-slide"
+              href="./images/reviews/photo_2023-11-11_01-44-05.jpg"
+              data-caption=""
+            >
+              <img
+                id="myImg"
+                src="./images/reviews/photo_2023-11-11_01-44-05.jpg"
+                alt="1 image"
+              />
             </a>
-            
           </div>
         </section>
         <section class="questions">
@@ -410,26 +550,32 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
-      var swiper = new Swiper(".mySwiper", {
+      let swiper = new Swiper(".mySwiper", {
         effect: "coverflow",
         grabCursor: true,
         centeredSlides: true,
+        loop: true,
         slidesPerView: "auto",
         coverflowEffect: {
           rotate: 0,
           stretch: 0,
           depth: 300,
-          modifier: 1,
+          modifier: 2,
           slideShadows: false,
+        },
+        autoplay: {
+          delay: 2500,
+          disableOnInteraction: false,
         },
         pagination: {
           el: ".swiper-pagination",
         },
       });
-    </script>
-    <script
-      src="./scripts/baguetteBox.min.js"
-      async
-    ></script>
+      let swiper2 = new Swiper(".mySwiper2", {
+      watchSlidesProgress: true,
+      slidesPerView: 3.2,
+    });
+      </script>
+    <script src="./scripts/baguetteBox.min.js" async></script>
   </body>
 </html>
