доработка скорости загрузки страницы

--- a/index.html
+++ b/index.html
@@ -581,6 +581,9 @@
       </section>
     </main>
     <script src="./scripts/app.js"></script>
+    <script src="./scripts/showSlides.js"></script>
+    <script src="./scripts/showTime.js"></script>
+    <script src="./scripts/humburger.js"></script>
     <script
       defer
       src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
