ускорена работа прилжения, удалены ссылки на Ютуб

--- a/index.html
+++ b/index.html
@@ -183,12 +183,7 @@
                 котором захочется рассказать!
               </p>
             </div>
-            <div class="video">
-              <!-- <video
-                src="https://disk.yandex.ru/i/30lVEvAc-51BLg"
-                controls
-                style="max-width: 700px; display: none"
-              ></video> -->
+            <!-- <div class="video">
               <iframe
                 width="100%"
                 src="https://www.youtube.com/embed/wkzSDYrMuCM?si=iaPFYPS7406ircWd"
@@ -205,7 +200,7 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen
               ></iframe>
-            </div>
+            </div> -->
           </div>
           <p class="video__text">
             Вы увидите сон, о котором захочется рассказать!
@@ -452,7 +447,7 @@
               <img
                 id="myImg"
                 src="./images/reviews/photo_2023-11-11_01-35-33.jpg"
-                alt="1 image"
+                alt="1 image" loading="lazy"
               />
             </a>
             <a
@@ -463,7 +458,7 @@
               <img
                 id="myImg"
                 src="./images/reviews/photo_2023-11-11_01-43-57.jpg"
-                alt="1 image"
+                alt="1 image" loading="lazy"
               />
             </a>
             <a
@@ -474,7 +469,7 @@
               <img
                 id="myImg"
                 src="./images/reviews/photo_2023-11-11_01-44-01.jpg"
-                alt="1 image"
+                alt="1 image" loading="lazy"
               />
             </a>
             <a
@@ -485,7 +480,7 @@
               <img
                 id="myImg"
                 src="./images/reviews/photo_2023-11-11_01-44-05.jpg"
-                alt="1 image"
+                alt="1 image" loading="lazy"
               />
             </a>
           </div>
